hosrizontal alignment fix

--- a/src/stylesheets/partials/_application.scss
+++ b/src/stylesheets/partials/_application.scss
@@ -15,7 +15,7 @@ position:absolute;
 top:50%;
 left:50%;
 width:760px;
-margin: -300px auto 0 -400px;
+margin: -300px auto 0 -380px;
 
 
   a{
